<resources>
    <string name="app_name">Travel_App</string>
    <string name="best_way_to_organize_travels">Best way to organize travels</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sing_up_with_facebook">Sing Up With <b>FACEBOOK</b></string>
    <string name="already_have_an_account_sign_in">Already have an account? <b>Sign In</b></string>
    <string name="social_networks">Social Networks</string>
    <string name="e_mail">E-mail:</string>
    <string name="password">Password:</string>
    <string name="full_name">Full Name:</string>
    <string name="name_or_e_mail">Name or E-mail:</string>
    <string name="feedback">Feedback</string>
    <string name="notification">Notification</string>
    <string name="help">Help</string>
    <string name="travel_guide">Travel Guide</string>
    <string name="private_details">Private Details</string>
    <string name="abdallah_mostafa">Abdallah Mostafa</string>
    <string name="grander">Grander:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="age">Age:</string>
    <string name="edit">Edit</string>
    <string name="plane">Plane</string>
    <string name="car">Car</string>
    <string name="train">Train</string>
    <string name="you_will_travel_by">You will travel by?</string>
</resources>
