<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/ic_close_black_24dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"/>
    <View
        android:id="@+id/viewprofile"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/view_gradient"
        android:layout_centerVertical="true"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:id="@+id/imgprofile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@drawable/img_person"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp">

    </LinearLayout>

    <TextView
        android:id="@+id/nameuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgprofile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="#FFF"
        android:text="@string/abdallah_mostafa"
        android:textSize="23sp" />
    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/nameuser"
        android:text="Mansoura, Egypt"
        android:textColor="#FFF"
        android:textSize="15dp"/>

    <LinearLayout
        android:id="@+id/signupbox"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@drawable/fundo_branco"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_cloud_queue_black_24dp"
            android:layout_marginTop="30dp"
            android:text="@string/social_networks"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="#778899"
            android:textAlignment="textStart"
            tools:ignore="RtlCompat"
            android:drawablePadding="15sp"/>

        <Button
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_card_travel_black_24dp"
            android:text="@string/travel_guide"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="#778899"
            android:textAlignment="textStart"
            tools:ignore="RtlCompat"
            android:drawablePadding="15sp"/>

        <Button
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_notifications_black_24dp"
            android:text="@string/notification"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="#778899"
            android:textAlignment="textStart"
            tools:ignore="RtlCompat"
            android:drawablePadding="15sp"/>

        <Button
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_help_outline_black_24dp"
            android:text="@string/help"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="#778899"
            android:textAlignment="textStart"
            tools:ignore="RtlCompat"
            android:drawablePadding="15sp"/>

        <Button
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_textsms_black_24dp"
            android:text="@string/feedback"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="#778899"
            android:textAlignment="textStart"
            tools:ignore="RtlCompat"
            android:drawablePadding="15sp"/>
    </LinearLayout>
    <Button
        android:id="@+id/config"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="#FFF"
        android:drawableBottom="@drawable/ic_settings_black_24dp"
        android:paddingBottom="12sp"
        android:layout_alignParentBottom="true"/>
    <Button
        android:id="@+id/exit"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="#FFF"
        android:drawableBottom="@drawable/ic_exit_to_app_black_24dp"
        android:paddingBottom="12sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>