<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/viewsignup"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/view_gradient"
        android:layout_centerVertical="true"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:id="@+id/logosignup"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@drawable/fundo_branco"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp">

        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/travel_icon" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logosignup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:textColor="#FFF"
        android:text="@string/sign_in"
        android:textSize="23sp" />

    <LinearLayout
        android:id="@+id/signupbox"
        android:layout_width="350dp"
        android:layout_height="320dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@drawable/fundo_branco"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_or_e_mail"
            android:layout_marginLeft="25dp"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableEnd="@drawable/ic_person_black_24dp"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginLeft="25dp"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableEnd="@drawable/ic_visibility_black_24dp"
            android:textSize="20dp"/>
        <Button
            android:id="@+id/signup"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/gradient"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_sign_in"
            android:layout_gravity="center"/>
    </LinearLayout>

</RelativeLayout>