<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/viewhome"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/view_gradient"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/you_will_travel_by"/>
    <Button
        android:id="@+id/btnplane"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignStart="@id/viewhome"
        android:elevation="15dp"
        android:padding="35sp"
        android:drawableTop="@drawable/avianzinho"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:text="@string/plane"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/fundo_branco"/>

    <Button
        android:id="@+id/btntrain"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:elevation="15dp"
        android:textAllCaps="false"
        android:padding="35sp"
        android:textSize="20sp"
        android:drawableTop="@drawable/ooootrembaum"
        android:text="@string/train"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/btnplane"
        android:background="@drawable/fundo_branco"/>

    <Button
        android:id="@+id/btncar"
        android:layout_width="310dp"
        android:layout_height="150dp"
        android:layout_marginLeft="30dp"
        android:elevation="15dp"
        android:textAllCaps="false"
        android:drawableTop="@drawable/carrrrrinhum"
        android:textSize="20sp"
        android:padding="35sp"
        android:text="@string/car"
        android:layout_marginTop="10dp"
        android:layout_below="@id/btnplane"
        android:background="@drawable/fundo_branco"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="4">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textColor="#BEBEBE"
            android:background="#FFF"
            android:text="home"
            android:textSize="10sp"
            android:drawableTop="@drawable/ic_home_black_24dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="#FFF"
            android:textColor="#BEBEBE"
            android:text="Tours"
            android:textSize="10sp"
            android:drawableTop="@drawable/ic_business_center_black_24dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textColor="#BEBEBE"
            android:background="#FFF"
            android:text="Explore"
            android:textSize="10sp"
            android:drawableTop="@drawable/ic_search_black_24dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textColor="#BEBEBE"
            android:background="#FFF"
            android:text="Profile"
            android:textSize="10sp"
            android:drawableTop="@drawable/ic_person_outline_black_24dp"/>
    </LinearLayout>
</RelativeLayout>